--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "bootstrap": "^5.1.3"
   }
 }
