--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap": "^5.1.3",
     "browser-sync": "^2.27.9",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
@@ -22,6 +23,6 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "sass": "^1.49.9",
-    "bootstrap": "^5.1.3"
+    "jQuery": "^1.7.4"
   }
 }
