--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
-    "sass": "^1.49.9",
-    "jQuery": "^1.7.4"
+    "jQuery": "^1.7.4",
+    "sass": "^1.49.9"
   }
 }
