chore: 安裝最新版jquery

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
-    "jQuery": "^1.7.4",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "jquery": "^3.6.0"
   }
+
 }
